# DevicePosture

./: .gitignore  AGENTS.md  README.md  collector-output.json  manifest
.beads/: metadata.json
.codex/: config.toml
.codex/prompts/: speckit.constitution.md  speckit.specify.md
codex/rules/: host-access.rules
docs/: api-examples.md  architecture.md
docs/agent-playbook/: SKILLS-ECOSYSTEMS.md  UPSTREAM-SOURCES.md  data-pipeline-review-checklist.md  data-workflow-orchestration-playbook.md  idempotency-rerun-safety-checklist.md  spark-tuning-notes.md
endpoint-collector/: README.md
endpoint-collector/linux/: README.md
endpoint-collector/powershell/: collector.config.json  device_posture_collector.ps1  get_collector_task_status.ps1  install_collector_startup.ps1  install_collector_task.ps1  run_collector_hidden.vbs  stop_collector_runtime.ps1  uninstall_collector_startup.ps1  uninstall_collector_task.ps1
endpoint-collector/python_collector/: collector.py  config.py  example-config.toml  http_client.py  runtime.py  service.py  utils.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: BUILD_ID  app-build-manifest.json  trace  (+6 more)
scripts/: dev.ps1  dev.sh  smoke_test.ps1
shared/: pyproject.toml
shared/posture_shared/: __init__.py  security.py
shared/posture_shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
shared/posture_shared/interfaces/: __init__.py  adapters.py  collectors.py  evaluators.py
shared/posture_shared/models/: __init__.py  enforcement.py  evaluation.py  policy.py  telemetry.py
(+302 files in other folders)
