[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "posture-shared"
version = "0.1.0"
description = "Shared models and interfaces for the device posture MVP"
dependencies = ["pydantic>=2.7,<3.0"]

[tool.setuptools.packages.find]
include = ["posture_shared*"]
